--- a/map_without_sold.html
+++ b/map_without_sold.html
@@ -5,7 +5,7 @@
     <title>VillageMap</title>
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="js/imagemapster.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/map_without_sold.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/map.css" />
     <script type="text/javascript" src="js/map_without_sold.js"></script>
